--- a/website/components/player-profile.html
+++ b/website/components/player-profile.html
@@ -49,7 +49,7 @@
 
       <!-- Graph Section 2 -->
       <section>
-        <p class="font-semibold mb-2">Surface Win Rate:</p>
+        <p class="font-semibold mb-2">Player Key Statistics:</p>
         <div id="graph2" class="w-full h-64 bg-gray-200 flex items-center justify-center rounded-lg">
           [Graph 2 Placeholder]
         </div>
@@ -70,7 +70,7 @@
     </div>
     <div class="md:col-span-1 space-y-10 text-3xl">
       <section>
-        <p class="font-semibold mb-2">Player's Biggest Rivalries:</p>
+        <p class="font-semibold mb-2">Player's Biggest Rivalries by Court Surface:</p>
         <div id="graph4" class="w-full h-64 bg-gray-200 flex items-center justify-center rounded-lg">
           [Graph 4 Placeholder]
         </div>
