--- a/website/components/landing.html
+++ b/website/components/landing.html
@@ -1,4 +1,4 @@
-<div class="landing flex flex-col justify-center items-center min-h-screen py-20" id="home">
+<div class="landing flex flex-col justify-center items-center h-screen" id="home">
     <div class="title">
         <div id="tennis" class="text">Tennis</div>
         <div id="for" class="text">FOR</div>
@@ -6,7 +6,7 @@
     </div>
     
     <!-- Arrow to scroll down -->
-    <div class="arrow mt-16" onclick="document.getElementById('about-section').scrollIntoView({behavior: 'smooth'})">
+    <div class="arrow absolute bottom-8" onclick="document.getElementById('about-section').scrollIntoView({behavior: 'smooth'})">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-10 h-10 animate-bounce">
             <path d="M12 17.414l-6.707-6.707 1.414-1.414L12 14.586l5.293-5.293 1.414 1.414z"/>
         </svg>
