--- a/website/components/about.html
+++ b/website/components/about.html
@@ -65,7 +65,7 @@
     </div>
     
     <!-- Arrow to scroll down to player finder -->
-    <div class="flex justify-center py-4" onclick="document.getElementById('player-finder-section').scrollIntoView({behavior: 'smooth'})">
+    <div class="flex justify-center py-4 cursor-pointer" onclick="document.getElementById('players-overview').scrollIntoView({behavior: 'smooth'})">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-10 h-10 animate-bounce">
             <path d="M12 17.414l-6.707-6.707 1.414-1.414L12 14.586l5.293-5.293 1.414 1.414z"/>
         </svg>
