--- a/docs/components/find-your-player.html
+++ b/docs/components/find-your-player.html
@@ -1,4 +1,4 @@
-<div class="bg-gray-100 h-screen flex flex-col" id="player-finder">
+<div class="bg-gray-100 flex flex-col" id="player-finder">
   <!-- Header  -->
   <header class="w-full py-4 bg-[#0a1721] text-white text-center">
     <h1 class="text-4xl md:text-6xl font-bold">Find your player</h1>
@@ -37,22 +37,25 @@
 
       <!-- Results -->
       <div class="grid grid-cols-1 md:grid-cols-3 gap-4 px-2 md:px-8">
-        <div class="flex justify-center">
+        <div class="flex justify-center text-center">
           <a href="#player-profile-section" onclick="document.getElementById('player-profile-section').scrollIntoView({behavior: 'smooth'})"
              class="transform hover:scale-105 transition-all">
             <img src="assets/icons/tennis-player-silhouette-svgrepo-com-2.svg" alt="Player Icon" class="w-4/5 max-w-xs rounded-lg" />
+            <p>Player 1</p>
           </a>
         </div>
-        <div class="flex justify-center">
+        <div class="flex justify-center text-center">
           <a href="#player-profile-section" onclick="document.getElementById('player-profile-section').scrollIntoView({behavior: 'smooth'})"
              class="transform hover:scale-105 transition-all">
             <img src="assets/icons/tennis-player-silhouette-svgrepo-com-2.svg" alt="Player Icon" class="w-4/5 max-w-xs rounded-lg" />
+            <p>Player 2</p>
           </a>
         </div>
-        <div class="flex justify-center">
+        <div class="flex justify-center text-center">
           <a href="#player-profile-section" onclick="document.getElementById('player-profile-section').scrollIntoView({behavior: 'smooth'})"
              class="transform hover:scale-105 transition-all">
             <img src="assets/icons/tennis-player-silhouette-svgrepo-com-2.svg" alt="Player Icon" class="w-4/5 max-w-xs rounded-lg" />
+            <p>Player 3</p>
           </a>
         </div>
       </div>
