--- a/docs/components/players-overview.html
+++ b/docs/components/players-overview.html
@@ -56,7 +56,7 @@
       <!-- Bottom section  -->
       <div class="bg-white rounded-xl shadow-sm p-4 relative overflow-hidden mb-4">
         <h2 class="text-xl font-semibold text-gray-800">Player style by surface</h2>
-        <p class="mt-2 mb-4 text-gray-600 text-sm">See how player statistics are influcenced by the surface.</p>
+        <p class="mt-2 mb-4 text-gray-600 text-sm">See how player statistics are influenced by the surface.</p>
         <div class="mb-4 flex items-center gap-2">
           <label for="overviewSurfaceDropdown" class="text-gray-700 font-medium whitespace-nowrap">Surface:</label>
           <select id="overviewSurfaceDropdown" 
@@ -64,9 +64,10 @@
             <option value="hard">Hard</option>
             <option value="clay">Clay</option>
             <option value="grass">Grass</option>
+              <option value="carpet">Carpet</option>
           </select>
         </div>
-        <img src="assets/graphs/stats_across_surfaces.jpeg" alt="Performance Metrics" class="w-full h-full object-contain" />
+        <img src="assets/graphs/stats_across_surfaces.jpeg" alt="Performance Metrics" class="w-3/5 object-contain mx-auto" />
       </div>
     </div>
   </div>
