minor design updates

--- a/docs/components/players-overview.html
+++ b/docs/components/players-overview.html
@@ -2,9 +2,9 @@
     <!-- Header -->
     <header class="w-full py-8 bg-[var(--color-dark)] shadow-sm text-center relative">
       <h1 class="text-4xl md:text-5xl font-bold text-center mb-6 text-white">Overview</h1>
-      <p class="text-lg text-center max-w-4xl mx-auto mb-8 text-white">Here you can compare global statistics about tennis players. In the dropdown below, select the players used for the statistics below.</p>
+      <p class="text-lg text-center max-w-4xl mx-auto mb-8 text-white">Here you can compare global statistics about tennis players. Select for which players you want statistics in the dropdown below.</p>
       <div class="mb-4 flex items-center gap-2 w-full justify-center">
-        <label for="playersDropdown" class="text-gray-300 font-medium whitespace-nowrap">Statistics on:</label>
+        <label for="playersDropdown" class="text-white font-lg whitespace-nowrap">Statistics on:</label>
         <select id="playersDropdown" class="p-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
             <option value="top100">Top 100 players</option>
             <option value="top100_wta">Top 100 WTA players</option>
@@ -50,7 +50,7 @@
       <div class="bg-white rounded-xl shadow-sm p-4 relative overflow-hidden mb-4">
         <h2 class="text-xl font-semibold text-gray-800">Players by Country</h2>
         <p class="mt-2 mb-4 text-gray-600 text-sm">See how the players are distributed among countries. The size of the bubble indicates how many players come from that country.</p>
-        <img src="assets/graphs/worldview_pseudo.jpeg" alt="Performance Metrics" class="w-full h-full object-contain" />
+        <img src="assets/graphs/worldview_pseudo.jpeg" alt="Performance Metrics" class="w-4/5 h-full object-contain mx-auto" />
       </div>
 
       <!-- Bottom section  -->
