--- a/docs/components/about.html
+++ b/docs/components/about.html
@@ -1,4 +1,4 @@
-<div class="bg-white h-screen flex flex-col" id="about">
+<div class="bg-white flex flex-col" id="about">
     <div class="container mx-auto px-4 py-8 flex-grow overflow-y-auto">
         <!-- Main about content -->
         <h2 class="text-4xl md:text-5xl font-bold text-center mb-6">Learn Tennis Basics</h2>
@@ -19,7 +19,7 @@
             </a>
 
             <!-- Box 2: Tournaments -->
-            <a href="pages/tournaments.html" class="tennis-info-box bg-[rgb(255,99,132,0.9)] text-white transform hover:scale-105 transition-all animate-bounce-slow animation-delay-200">
+            <a href="pages/tournaments.html" class="tennis-info-box bg-[rgb(54,162,235,0.9)] text-white transform hover:scale-105 transition-all animate-bounce-slow animation-delay-200">
                 <div class="flex flex-col items-center p-6 text-center h-full">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 mb-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10" />
@@ -30,7 +30,7 @@
             </a>
 
             <!-- Box 3: Court -->
-            <a href="pages/court.html" class="tennis-info-box bg-[rgb(54,162,235,0.9)] text-white transform hover:scale-105 transition-all animate-bounce-slow animation-delay-400">
+            <a href="pages/court.html" class="tennis-info-box bg-[rgb(75,192,192,0.9)] text-white transform hover:scale-105 transition-all animate-bounce-slow animation-delay-400">
                 <div class="flex flex-col items-center p-6 text-center h-full">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 mb-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 20l-5.447-2.724A1 1 0 013 16.382V5.618a1 1 0 011.447-.894L9 7m0 13l6-3m-6 3V7m6 10l4.553 2.276A1 1 0 0021 18.382V7.618a1 1 0 00-.553-.894L15 4m0 13V4m0 0L9 7" />
@@ -41,7 +41,7 @@
             </a>
 
             <!-- Box 4: Equipment -->
-            <a href="pages/equipment.html" class="tennis-info-box bg-[rgb(75,192,192,0.9)] text-white transform hover:scale-105 transition-all animate-bounce-slow animation-delay-600">
+            <a href="pages/equipment.html" class="tennis-info-box bg-[rgb(200,192,0,0.9)] text-white transform hover:scale-105 transition-all animate-bounce-slow animation-delay-600">
                 <div class="flex flex-col items-center p-6 text-center h-full">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 mb-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
@@ -52,7 +52,7 @@
             </a>
             
             <!-- Box 5: Player Stats -->
-            <a href="pages/stats.html" class="tennis-info-box bg-[rgb(200,192,0,0.9)] text-white transform hover:scale-105 transition-all animate-bounce-slow animation-delay-800">
+            <a href="pages/stats.html" class="tennis-info-box bg-[rgb(255,99,132,0.9)] text-white transform hover:scale-105 transition-all animate-bounce-slow animation-delay-800">
                 <div class="flex flex-col items-center p-6 text-center h-full">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 mb-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
