--- a/docs/components/player-profile.html
+++ b/docs/components/player-profile.html
@@ -1,4 +1,4 @@
-<div class="bg-gradient-to-br from-gray-50 to-gray-100 overflow-y-auto" id="player-profile">
+<div class="bg-[#F6FCDF] overflow-y-auto" id="player-profile">
   <!-- Header -->
   <header class="w-full py-2 bg-white shadow-sm text-center relative">
     <div class="absolute left-0 top-0 h-full w-1 bg-gradient-to-b from-blue-500 to-green-500"></div>
