--- a/docs/components/players-overview.html
+++ b/docs/components/players-overview.html
@@ -1,4 +1,4 @@
-<div class="bg-gradient-to-br from-gray-50 to-gray-100 min-h-screen overflow-y-auto" id="player-profile">
+<div class="bg-[#F6FCDF] min-h-screen overflow-y-auto" id="player-profile">
     <!-- Header -->
     <header class="w-full py-8 bg-[var(--color-dark)] shadow-sm text-center relative">
       <h1 class="text-4xl md:text-5xl font-bold text-center mb-6 text-white">Overview</h1>
@@ -15,7 +15,7 @@
     </header>
   
     <!-- Main Content  -->
-    <div class="container mx-auto px-4 py-3 flex flex-col">
+    <div class="container mx-auto px-4 py-3 flex flex-col bg-[#F6FCDF]">
       
       <!-- Top section-->
       <div class="flex flex-col lg:flex-row gap-4 mb-4">
