--- a/docs/components/find-your-player.html
+++ b/docs/components/find-your-player.html
@@ -1,11 +1,11 @@
-<div class="bg-gray-100 flex flex-col" id="player-finder">
+<div class="bg-[#F6FCDF] flex flex-col" id="player-finder">
   <!-- Header  -->
   <header class="w-full py-4 bg-[#0a1721] text-white text-center">
     <h1 class="text-4xl md:text-6xl font-bold">Find your player</h1>
   </header>
 
   <!-- Main Content  -->
-  <div class="container mx-auto px-4 md:px-10 py-4 grid grid-cols-1 md:grid-cols-3 gap-6 flex-grow">
+  <div class="container bg-[#F6FCDF] mx-auto px-4 md:px-10 py-4 grid grid-cols-1 md:grid-cols-3 gap-6 flex-grow">
     <!-- Left Column -->
     <div class="md:col-span-1 flex flex-col space-y-4 overflow-y-auto">
       <!-- Input Box -->
