updates player profiles

--- a/docs/components/find-your-player.html
+++ b/docs/components/find-your-player.html
@@ -30,7 +30,7 @@
     <div class="md:col-span-2 flex flex-col space-y-6">
       <!-- Find Button  -->
       <div class="flex justify-center items-center mt-2 md:mt-10">
-        <button class="px-5 py-4 w-4/5 text-3xl md:text-4xl font-bold text-white bg-black rounded-full shadow-lg hover:bg-gray-800 transition duration-300">
+        <button id="find-player-button" class="px-5 py-4 w-4/5 text-3xl md:text-4xl font-bold text-white bg-black rounded-full shadow-lg hover:bg-gray-800 transition duration-300">
           Find my player
         </button>
       </div>
