style & player name in profile header

--- a/docs/components/find-your-player.html
+++ b/docs/components/find-your-player.html
@@ -11,7 +11,7 @@
       <!-- Input Box -->
       <div class="relative w-full">
         <input
-            class="w-full p-3 text-xl md:text-2xl font-bold text-black bg-white border-4 border-black rounded-full shadow-md focus:outline-none focus:ring-2 focus:ring-blue-400"
+            class="w-full p-3 text-xl md:text-2xl text-black bg-white border-4 border-black rounded-full shadow-md focus:outline-none focus:ring-2 focus:ring-blue-400"
             list="players" id="playerInput" placeholder="Enter Player Name">
         <datalist id="players">
           <!-- populated dynamically -->
