design and remove logs

--- a/docs/components/find-your-player.html
+++ b/docs/components/find-your-player.html
@@ -1,4 +1,4 @@
-<div class="bg-[#F6FCDF] flex flex-col h-screen" id="player-finder">
+<div class="bg-[#F6FCDF] flex flex-col h-full" id="player-finder">
   <!-- Header  -->
   <header class="w-full py-4 bg-[#0a1721] text-white text-center">
     <h1 class="text-4xl md:text-6xl font-bold">Find your player</h1>
