wip program overview

--- a/docs/components/players-overview.html
+++ b/docs/components/players-overview.html
@@ -40,17 +40,17 @@
               </select>
           </div>
 
-          <div class="w-full h-full bg-white">
-            <img src="assets/graphs/ageyear_pseudo.svg" alt="Performance Timeline" />
+          <div class="w-full h-full bg-white" id="statsbydate-linechart">
+            <!-- <img src="assets/graphs/ageyear_pseudo.svg" alt="Performance Timeline" /> -->
           </div>
         </div>
       </div>
   
       <!-- Middle section  -->
-      <div class="bg-white rounded-xl shadow-sm p-4 relative overflow-hidden mb-4">
+      <div class="bg-white rounded-xl shadow-sm p-4 relative overflow-hidden mb-4" id="world-map">
         <h2 class="text-xl font-semibold text-gray-800">Players by Country</h2>
         <p class="mt-2 mb-4 text-gray-600 text-sm">See how the players are distributed among countries. The size of the bubble indicates how many players come from that country.</p>
-        <img src="assets/graphs/worldview_pseudo.jpeg" alt="Performance Metrics" class="w-4/5 h-full object-contain mx-auto" />
+        <!-- <img src="assets/graphs/worldview_pseudo.jpeg" alt="Performance Metrics" class="w-4/5 h-full object-contain mx-auto" /> -->
       </div>
 
       <!-- Bottom section  -->
