Added date slider and dynamic resizing of map

--- a/docs/components/players-overview.html
+++ b/docs/components/players-overview.html
@@ -40,9 +40,11 @@
               </select>
           </div>
 
-          <div class="w-full h-full bg-white" id="statsbydate-linechart">
+          <div class="w-full bg-white" id="statsbydate-linechart">
             <!-- <img src="assets/graphs/ageyear_pseudo.svg" alt="Performance Timeline" /> -->
           </div>
+          <div class="w-full bg-white" id="slider-container"></div>
+          <div class="w-full bg-white" id="slider-date-label"></div>
         </div>
       </div>
   
