Added table of top100 players

--- a/docs/components/players-overview.html
+++ b/docs/components/players-overview.html
@@ -23,7 +23,7 @@
         <!-- List of players used for the rest of the statistics -->
         <div class="lg:w-1/3 min-w-96 bg-white rounded-xl shadow-sm p-4 overflow-hidden">
             <h2 class="text-xl font-semibold text-gray-800">Top 100 players</h2>
-            <div id="topplayers_table"></div>
+            <div id="topplayers_table" class="max-h-96 overflow-y-auto border border-gray-300"></div>
         </div>
   
         <!-- Performance overview  -->
